Add maven run config
to runn app with maven